Fix LCP for Article Pages (#308)
* Remove RTT as a block.

* Improve LCP on article pages.

* Dont delay too long.

* No consent manager on localhost.

* put articleheader back in LCP

* Fix Article Image.

* Lint.

--- a/cigaradvisor/styles/styles.css
+++ b/cigaradvisor/styles/styles.css
@@ -333,6 +333,46 @@ main .section.center .default-content-wrapper {
   background-color: var(--clr-pampas);
 }
 
+
+#return-to-top {
+  display: block;
+  position: fixed;
+  top: 50%;
+  right: 10px;
+  z-index: 499;
+  opacity: .5;
+  transition: opacity .2s ease-in-out, visibility .2s linear;
+  cursor: pointer;
+  height: 50px;
+  width: 50px;
+  margin-top: -25px;
+}
+
+#return-to-top.hidden {
+  opacity: 0;
+}
+
+#return-to-top > .icon-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--tan);
+  border-radius: 50%;
+  height: 50px;
+  width: 50px;
+
+  --icon-size: 36px;
+}
+
+#return-to-top > .icon-container > .icon {
+  margin-top: 2px;
+  filter: var(--clr-filter-white);
+}
+
+#return-to-top > picture {
+  display: none;
+}
+
 @media screen and (min-width: 600px) {
   h1 {
     font-size: 35px;
@@ -352,6 +392,24 @@ main .section.center .default-content-wrapper {
     background: url('../icons/decorright.png') center no-repeat;
     background-size: contain;
     margin-left: 15px;
+  }
+
+  #return-to-top {
+    height: 170px;
+    width: 50px;
+    margin-top: -75px;
+  }
+
+  #return-to-top:hover {
+    opacity: 1;
+  }
+
+  #return-to-top > .icon-container {
+    display: none;
+  }
+
+  #return-to-top > picture {
+    display: initial;
   }
 }
 
